# opa-bundle-decoder-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: ci.yml  publish.yml
_fixtures_/: policy.wasm
examples/bundle-decode-node/: index.js  package.json
examples/bundle-decode-web/: index.html  main.js  package.json  vite.config.js
src/: lib.rs
tests/: node.rs
